--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mutationobserver-shim": "^0.3.3",
     "vue-template-compiler": "^2.5.21"
   }
 }
